# wolfram-parse

./: .gitignore  Cargo.toml  README.md
benches/: string_interning.rs
examples/: basic.rs
paclet-decode/: decoder.rs  encoder.rs  instructions.md
plans/: 00-OVERALL-IMPLEMENTATION-PLAN.md  01-PHF-IMPLEMENTATION-PLAN.md  02-SMALLVEC-OPTIMIZATION-PLAN.md  03-STRING-INTERNING-PLAN.md  04-UNIFIED-ERROR-HANDLING-PLAN.md  05-API-ERGONOMICS-PLAN.md  06-GENERATED-FILES-REORGANIZATION-PLAN.md  07-DEPRECATED-PATTERNS-CLEANUP-PLAN.md
src/: abstract_cst.rs  cst.rs  error_handling.rs  feature.rs  lib.rs  long_names.rs  newtypes.rs  paclet.rs  parse.rs  parse_cst.rs  precedence.rs  source.rs  string_interner.rs  tests.rs  utils.rs
src/abstract_cst/: abstract_call_node.rs
src/parse/: token_parselets.rs
src/read/: byte_decoder.rs  character_decoder.rs  code_point.rs  wl_character.rs
src/tests/: test_file_parsing.rs  test_paclet_decoder.rs  test_tokenizer.rs  test_wl_character.rs
src/tokenize/: token.rs  token_kind.rs  tokenizer.rs
