[package]
name = "wolfram-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Wolfram Research"]
description = "A parser for Wolfram Language input form syntax"
readme = "README.md"
repository = "https://github.com/WolframResearch/codeparser"
license = "MIT"
keywords = ["wolfram", "parser", "ast", "cst", "mathematica"]
categories = ["parser-implementations", "text-processing"]

[workspace]

[dependencies]
edit-distance = "2.1.0"
memchr = "2.5.0"
wolfram-expr = "0.1.4"

[dev-dependencies]
pretty_assertions = "1.2.1"
criterion = "0.3.6"

[features]
default = ["COMPUTE_SOURCE"]
COMPUTE_SOURCE = []
FAST_STRING_SCAN = []

[[bench]]
name = "bench_general"
harness = false

[[bench]]
name = "bench_fast_string_scan"
harness = false
required-features = ["FAST_STRING_SCAN"]