[package]
name = "wolfram-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Wolfram Research"]
description = "A parser for Wolfram Language input form syntax"
readme = "README.md"
repository = "https://github.com/WolframResearch/codeparser"
license = "MIT"
keywords = ["wolfram", "parser", "ast", "cst", "mathematica"]
categories = ["parser-implementations", "text-processing"]

[workspace]

[dependencies]
edit-distance = "2.1.0"
memchr = "2.5.0"
wolfram-expr = "0.1.4"
phf = { version = "0.11", features = ["macros"] }
phf_shared = "0.11"
smallvec = "1.13"
thiserror = "1.0"
string-interner = { version = "0.17", default-features = false, features = ["inline-more", "backends"] }
once_cell = "1.19"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
criterion = "0.3.6"

[features]
default = []
FAST_STRING_SCAN = []
DIAGNOSTICS = []
USE_EXPR_LIB = []
CHECK_ABORT = []
USE_MATHLINK = []
string-interning = []

[[bench]]
name = "bench_general"
harness = false

[[bench]]
name = "bench_fast_string_scan"
harness = false
required-features = ["FAST_STRING_SCAN"]

[[bench]]
name = "string_interning"
harness = false

# CLI utilities
[[bin]]
name = "paclet"
path = "src/bin/paclet.rs"
doc = false

